gdb/ 	Fix const/volatile qualifiers of C++ types, PR c++/12328. 	* c-typeprint.c (c_type_print_args): Update the function comment.  New 	variable param_type, initialize it.  Remove const/volatile qualifiers 	for language_cplus and !show_artificial.  Use param_type.

gdb/testsuite/
	Fix const/volatile qualifiers of C++ types, PR c++/12328.
	* gdb.cp/overload-const.exp: New file.
	* gdb.cp/overload-const.cc: New file.